[package]
name = "e2ee_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
aes-gcm = "=0.9"
rand = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.31"
